Add back-to-top btn, stop slider

--- a/lesson-course-info.html
+++ b/lesson-course-info.html
@@ -39,7 +39,13 @@
 
 </head>
 
-<body class="blog-posts">
+<body class="blog-posts" id="top">
+
+	<div id="back-to-top-btn" class="btn-hide">
+		<a href="#top">
+			<h4 class="title title-white">トップ</h4>
+		</a>
+	</div>
 
 	<nav class="navbar navbar-default navbar-transparent navbar-fixed-top navbar-color-on-scroll">
 		<div class="container">
@@ -97,11 +103,11 @@
 									生徒の声
 								</a>
 							</li>
-							<li>
+							<!-- <li>
 								<a href="index.html#events">
 									イベント
 								</a>
-							</li>
+							</li> -->
 							<li>
 								<a href="index.html#team">
 									チーム
@@ -535,7 +541,7 @@
 														<!-- <li><b>4 to 100</b> Lesson pack</li> -->
 														<li>Up to 2.5 years to take the lessons</li>
 													</ul>
-													<a href="#" class="btn btn-primary btn-round">
+													<a href="#contactus" class="btn btn-primary btn-round">
 														Contact
 													</a>
 												</div>
@@ -553,7 +559,7 @@
 														<li><b>##</b> ###</li>
 														<li><b>##</b> ###</li>
 													</ul>
-													<a href="#" class="btn btn-white btn-round">
+													<a href="#contactus" class="btn btn-white btn-round">
 														Contact
 													</a>
 												</div>
@@ -573,7 +579,7 @@
 														<li><b>2</b> Students</li>
 														<li><b>40</b> Minutes</li>
 													</ul>
-													<a href="#" class="btn btn-primary btn-round">
+													<a href="#contactus" class="btn btn-primary btn-round">
 														Contact
 													</a>
 												</div>
@@ -591,7 +597,7 @@
 														<li><b>##</b> ###</li>
 														<li><b>##</b> ###</li>
 													</ul>
-													<a href="#" class="btn btn-primary btn-round">
+													<a href="#contactus" class="btn btn-primary btn-round">
 														Contact
 													</a>
 												</div>
@@ -611,7 +617,7 @@
 														<li>Up to <b>4</b> Students</li>
 														<li><b>40</b> Minutes</li>
 													</ul>
-													<a href="#" class="btn btn-primary btn-round">
+													<a href="#contactus" class="btn btn-primary btn-round">
 														Contact
 													</a>
 												</div>
@@ -629,7 +635,7 @@
 														<li><b>##</b> ###</li>
 														<li><b>##</b> ###</li>
 													</ul>
-													<a href="#" class="btn btn-primary btn-round">
+													<a href="#contactus" class="btn btn-primary btn-round">
 														Contact
 													</a>
 												</div>
@@ -864,5 +870,7 @@
 
 <script src="assets/js/totd.js" type="text/javascript"></script>
 <script src="assets/js/logo-color.js" type="text/javascript"></script>
+<script src="assets/js/top-btn.js" type="text/javascript"></script>
+
 
 </html>
