--- a/lesson-course.html
+++ b/lesson-course.html
@@ -39,7 +39,13 @@
 
 </head>
 
-<body class="blog-posts">
+<body class="blog-posts" id="top">
+
+	<div id="back-to-top-btn" class="btn-hide">
+		<a href="#top">
+			<h4 class="title title-white">トップ</h4>
+		</a>
+	</div>
 
 	<nav class="navbar navbar-default navbar-transparent navbar-fixed-top navbar-color-on-scroll">
 		<div class="container">
@@ -97,11 +103,11 @@
 									生徒の声
 								</a>
 							</li>
-							<li>
+							<!-- <li>
 								<a href="index.html#events">
 									イベント
 								</a>
-							</li>
+							</li> -->
 							<li>
 								<a href="index.html#team">
 									チーム
@@ -318,7 +324,7 @@
 						<div class="col-md-6 col-lg-4">
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
-									<div class="front front-background" style="height: 650px; background-image: url('assets/img/examples/card-project2.jpg');">
+									<div class="front front-background" style="height: 450px; background-image: url('assets/img/examples/card-project2.jpg');">
 										<div class="card-content">
 											<a href="#">
 												<!-- <h3 class="card-title">プライベートレッスン<br>（マンツーマン）</h3> -->
@@ -360,7 +366,7 @@
 						<div class="col-md-6 col-lg-4">
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
-									<div class="front front-background" style="height: 500px; background-image: url('assets/img/examples/card-project2.jpg');">
+									<div class="front front-background" style="height: 450px; background-image: url('assets/img/examples/card-project2.jpg');">
 										<div class="card-content">
 											<a href="#">
 												<h3 class="card-title">セミプライベート<br>レッスン<br>（1：2）</h3>
@@ -401,7 +407,7 @@
 						<div class="col-md-6 col-lg-4">
 							<div class="rotating-card-container manual-flip">
 								<div class="card card-rotate">
-									<div class="front front-background" style="height: 650px; background-image: url('assets/img/examples/card-project2.jpg');">
+									<div class="front front-background" style="height: 450px; background-image: url('assets/img/examples/card-project2.jpg');">
 										<div class="card-content">
 											<a href="#">
 												<h3 class="card-title">フリーカンバセーション<br>（フリートーク）</h3>
@@ -543,7 +549,7 @@
 						</div>
 
 						<div class="col-sm-12 text-center" style="margin-top: 30px;">
-							<a style="width: 200px;" href="lesson-course-info.html" class="btn btn-primary" style="margin-right: 30px;">レッスンコース</a>
+							<!-- <a style="width: 200px;" href="lesson-course-info.html" class="btn btn-primary" style="margin-right: 30px;">レッスンコース</a> -->
 							<a style="width: 200px;" href="pricing.html" class="btn btn-primary">料金と時間割</a>
 						</div>
 
@@ -766,5 +772,7 @@
 
 <script src="assets/js/totd.js" type="text/javascript"></script>
 <script src="assets/js/logo-color.js" type="text/javascript"></script>
+<script src="assets/js/top-btn.js" type="text/javascript"></script>
+
 
 </html>
