--- a/pricing.html
+++ b/pricing.html
@@ -39,7 +39,13 @@
 
 </head>
 
-<body class="blog-posts">
+<body class="blog-posts" id="top">
+
+	<div id="back-to-top-btn" class="btn-hide">
+		<a href="#top">
+			<h4 class="title title-white">トップ</h4>
+		</a>
+	</div>
 
 	<nav class="navbar navbar-default navbar-transparent navbar-fixed-top navbar-color-on-scroll">
 		<div class="container">
@@ -97,11 +103,11 @@
 									生徒の声
 								</a>
 							</li>
-							<li>
+							<!-- <li>
 								<a href="index.html#events">
 									イベント
 								</a>
-							</li>
+							</li> -->
 							<li>
 								<a href="index.html#team">
 									チーム
@@ -668,5 +674,7 @@
 
 <script src="assets/js/totd.js" type="text/javascript"></script>
 <script src="assets/js/logo-color.js" type="text/javascript"></script>
+<script src="assets/js/top-btn.js" type="text/javascript"></script>
+
 
 </html>
