--- a/about.html
+++ b/about.html
@@ -39,7 +39,13 @@
 
 </head>
 
-<body class="blog-posts">
+<body class="blog-posts" id="top">
+
+	<div id="back-to-top-btn" class="btn-hide">
+		<a href="#top">
+			<h4 class="title title-white">トップ</h4>
+		</a>
+	</div>
 
 	<nav class="navbar navbar-default navbar-transparent navbar-fixed-top navbar-color-on-scroll">
 		<div class="container">
@@ -97,11 +103,11 @@
 									生徒の声
 								</a>
 							</li>
-							<li>
+							<!-- <li>
 								<a href="index.html#events">
 									イベント
 								</a>
-							</li>
+							</li> -->
 							<li>
 								<a href="index.html#team">
 									チーム
@@ -244,7 +250,8 @@
 						<h3 class="title">President's Message</h3>
 						<p>Sun Mihall Language Service is the oldest foreign-owned English school in Kobe. Since 1981 we have
 							strived to provide our students with the best lessons possible using our original Sun Mihall teaching
-							method.</p>
+							method.
+						</p>
 						<blockquote>
 							<p>
 								“Our native English teachers and staff are very friendly, quite knowledgeable and qualified to help you
@@ -456,5 +463,7 @@
 
 <script src="assets/js/totd.js" type="text/javascript"></script>
 <script src="assets/js/logo-color.js" type="text/javascript"></script>
+<script src="assets/js/top-btn.js" type="text/javascript"></script>
+
 
 </html>
