--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 </head>
 
-<body class="landing-page">
+<body class="landing-page" id="top">
 
 
 
@@ -51,6 +51,14 @@
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
   </script>
+
+
+
+  <div id="back-to-top-btn" class="btn-hide">
+    <a href="#top">
+      <h4 class="title title-white">トップ</h4>
+    </a>
+  </div>
 
 
 
@@ -113,11 +121,11 @@
                   生徒の声
                 </a>
               </li>
-              <li>
+              <!-- <li>
                 <a href="#events">
                   イベント
                 </a>
-              </li>
+              </li> -->
               <li>
                 <a href="#team">
                   チーム
@@ -262,25 +270,31 @@
   <div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/bg8.jpg');">
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <h4>***新しい素敵なホームページはもうすぐ！***</h4>
+        <div class="col-md-8">
           <h1 class="title">目標を達成できる<br>英会話スクール</h1>
           <h3 class="title">今の勉強法やスクールで満足ですか？</h3>
           <br />
-          <a href="https://www.youtube.com/watch?v=aSdQn2mFn1I" target="_blank" class="btn btn-danger btn-raised btn-lg">
+          <!-- <a href="https://www.youtube.com/watch?v=aSdQn2mFn1I" target="_blank" class="btn btn-danger btn-raised btn-lg">
             <i class="fa fa-play"></i> Watch video
+          </a> -->
+          <a href="tel:###-###-###" class="call-now-btn-box u-margin-right-small">
+            <img src="assets/img/call-banner-blue.png" alt="" class="call-now-btn">
           </a>
           <a href="tel:###-###-###" class="call-now-btn-box">
             <img src="assets/img/call-banner-blue.png" alt="" class="call-now-btn">
           </a>
         </div>
       </div>
+
     </div>
   </div>
 
   <div class="main main-raised">
     <div class="container">
       <div id="features" class="section">
+
+
+        <h6 class="text-center">***新しい素敵なホームページはもうすぐ！***</h6>
 
         <h4 class="title text-center">神戸・三宮の英会話サンミハールランゲージサービス</h4>
 
@@ -334,7 +348,7 @@
           </div>
         </div>
         <div class="row text-center">
-          <a href="#" class="btn btn-primary btn-lg">
+          <a href="lesson-course.html" class="btn btn-primary btn-lg">
             レッスンを詳しく見てみる
           </a>
           <a href="tel:###-###-###" class="call-now-btn-box">
@@ -709,7 +723,7 @@
                   </ol>
                 </h5>
 
-                <a href="#" class="btn btn-primary">詳しく見る</a>
+                <a href="lesson-course.html" class="btn btn-primary">詳しく見る</a>
               </div>
 
               <!-- <div class="card card-plain card-blog">
@@ -766,6 +780,7 @@
 
           <div class="row">
 
+            <!-- <div id="carousel-testimonial" class="carousel slide" data-ride="carousel"> -->
             <div id="carousel-testimonial" class="carousel slide" data-ride="carousel">
 
               <h4 class="title text-center">神戸・三宮の英会話サンミハールランゲージサービス</h4>
@@ -1120,7 +1135,7 @@
         <a href="https://www.youtube.com/watch?v=MreeiBt7yMM&list=UUUDPTYAJh42HoaeHtKXQv1w&index=2" target="_blank"
           class="btn btn-danger btn-raised" style="width: 200px">
           <i class="fa fa-play">　</i>Matt先生　</a>
-        <a href="#" class="btn btn-primary btn-raised" style="width: 200px">About</a>
+        <a href="about.html" class="btn btn-primary btn-raised" style="width: 200px">About</a>
 
       </div>
     </div>
@@ -1580,5 +1595,6 @@
 
 <script src="assets/js/totd.js" type="text/javascript"></script>
 <script src="assets/js/logo-color.js" type="text/javascript"></script>
+<script src="assets/js/top-btn.js" type="text/javascript"></script>
 
 </html>
