Add form.php to homepage

--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,7 @@
         </div>
         <div class="col-md-5 contact-div">
           <div class="card card-contact">
-            <form role="form" id="contact-form" method="post">
+            <form role="form" id="contact-form" method="post" action="form.php">
               <div class="header header-raised header-blue text-center">
                 <h4 class="card-title">お問い合わせ</h4>
               </div>
