--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     gtag('config', 'UA-5349093-1');
   </script>
+  <meta name="google-site-verification" content="CS_uA2jfq_tuk0qBT4EusHgQzsIpObj46bUzfXUcqaQ" />
 
   <meta charset="utf-8">
   <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
