Update pricing tables on index page, about map and contact forms

--- a/about.html
+++ b/about.html
@@ -312,17 +312,20 @@
 					<h4 class="text-center">神戸・三宮の英会話サンミハールランゲージサービスの</h4>
 					<h2 class="title text-center">地図・アクセス</h2>
 					<div class="col-md-5 col-md-offset-1">
-						<img src="assets/img/map.png" alt="Access Map" style="width: 100%;">
+						<a href="https://goo.gl/maps/TtXhxjL5HBE2" target="_blank">
+							<img src="assets/img/about-map.jpg" alt="Access Map" style="width: 100%;">
+						</a>
+						<h5 class="text-center">地図はGoogle Mapで開きます</h5>
 					</div>
 					<div class="col-md-5">
 						<div class="row">
 							<div class="col-sm-12">
-								<div class="info info-horizontal">
+								<div class="info info-horizontal u-remove-padding">
 									<div class="icon icon-info icon-small">
 										<i class="material-icons">phone</i>
 									</div>
 									<div class="description">
-										<h5 class="info-title">Give us a ring</h5>
+										<h5 class="info-title">お電話でのお問い合わせ</h5>
 										<p class="map-contact-info">
 											TEL：078-331-3035
 											<br> 平日/AM11:30～PM8:30
@@ -333,7 +336,7 @@
 								</div>
 							</div>
 							<div class="col-sm-12">
-								<div class="info info-horizontal">
+								<div class="info info-horizontal u-remove-padding">
 									<div class="icon icon-info icon-small">
 										<i class="material-icons">pin_drop</i>
 									</div>
