--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
   <link rel="stylesheet" href="assets/css/main1.css">
   <link rel="stylesheet" href="assets/css/main2.css">
 
+  <!-- Google reCaptcha -->
+  <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 
 <body class="landing-page" id="top">
@@ -484,7 +486,7 @@
             <h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
             <div class="col-md-4">
               <h3 class="title">
-                あなたの次の目標達成のためにぴったり あった料金プランをご提案します。
+                あなたの次の目標達成のためにぴったりあった料金プランをご提案します。
               </h3>
               <!-- <ul class="nav nav-pills" role="tablist">
                 <li class="active">
@@ -548,13 +550,75 @@
                             <li>フリートーク1回無料付</li>
                             <li>ネイティブ講師</li>
                           </ul>
-                          <a href="#" class="btn btn-primary btn-round">
-                            Contact
+                          <a href="#contactus" class="btn btn-primary btn-round">
+                            お問い合わせ
                           </a>
                         </div>
                       </div>
                     </div>
 
+                    <div class="col-md-6">
+                      <div class="card card-pricing card-raised">
+                        <div class="card-content">
+                          <h6>プライベートレッスン（マンツーマン) </h6>
+                          <h5 class="category">チケット制3か月</h5>
+                          <h1 class="card-title"><small>¥</small>53,160</h1>
+                          <ul>
+                            <li>1:1</li>
+                            <li>40分×12回</li>
+                            <li>フリートーク3回無料付</li>
+                            <li>ネイティブ講師</li>
+                          </ul>
+                          <a href="#contactus" class="btn btn-primary btn-round">
+                            お問い合わせ
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
+
+                  <!-- <div class="tab-pane" id="commercial">
+                    <div class="col-md-6">
+                      <div class="card card-pricing card-raised">
+                        <div class="card-content">
+                          <h6 class="category">フリーカンバセーション</h6>
+                          <h5 class="category">月謝制</h5>
+                          <h1 class="card-title"><small>¥</small>9,180</h1>
+                          <ul>
+                            <li>1：2～7</li>
+                            <li>受け放題（80分/日）</li>
+                            <li>平日</li>
+                            <li>外国人講師</li>
+                          </ul>
+                          <a href="#contactus" class="btn btn-primary btn-round">
+                            お問い合わせ
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col-md-6">
+                      <div class="card card-pricing card-raised">
+                        <div class="card-content">
+                          <h6 class="category">フリーカンバセーション</h6>
+                          <h5 class="category">チケット制2か月</h5>
+                          <h1 class="card-title"><small>¥</small>12,850</h1>
+                          <ul>
+                            <li>1：2～7</li>
+                            <li>40分×12回</li>
+                            <li>平日</li>
+                            <li>外国人講師</li>
+                          </ul>
+                          <a href="#contactus" class="btn btn-primary btn-round">
+                            お問い合わせ
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div> -->
+
+                  <div class="tab-pane" id="commercial-2">
                     <div class="col-md-6">
                       <div class="card card-pricing card-raised">
                         <div class="card-content">
@@ -564,89 +628,30 @@
                           <ul>
                             <li>1：2～7</li>
                             <li>受け放題（80分/日）</li>
+                            <li>平日</li>
                             <li>外国人講師</li>
-                            <!-- <li><b>##</b> ###</li> -->
                           </ul>
-                          <a href="#" class="btn btn-primary btn-round">
-                            Contact
+                          <a href="#contactus" class="btn btn-primary btn-round">
+                            お問い合わせ
                           </a>
                         </div>
                       </div>
                     </div>
 
-                  </div>
-
-                  <div class="tab-pane" id="commercial">
                     <div class="col-md-6">
                       <div class="card card-pricing card-raised">
                         <div class="card-content">
-                          <h6 class="category">In School</h6>
-                          <h1 class="card-title"><small>¥</small>3000</h1>
+                          <h6>フリーカンバセーション</h6>
+                          <h5 class="category">チケット制2か月</h5>
+                          <h1 class="card-title"><small>¥</small>12,850</h1>
                           <ul>
-                            <li><b>2</b> Students</li>
-                            <li><b>40</b> Minutes</li>
-                            <li><b>##</b> ###</li>
-                            <li><b>##</b> ###</li>
+                            <li>1：2～7</li>
+                            <li>40分×12回</li>
+                            <li>平日</li>
+                            <li>外国人講師</li>
                           </ul>
-                          <a href="#" class="btn btn-primary btn-round">
-                            Contact
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="col-md-6">
-                      <div class="card card-pricing card-plain">
-                        <div class="card-content">
-                          <h6 class="category">In School</h6>
-                          <h1 class="card-title"><small>¥</small>3000</h1>
-                          <ul>
-                            <li><b>2</b> Students</li>
-                            <li><b>40</b> Minutes</li>
-                            <li><b>##</b> ###</li>
-                            <li><b>##</b> ###</li>
-                          </ul>
-                          <a href="#" class="btn btn-primary btn-round">
-                            Contact
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-
-                  </div>
-
-                  <div class="tab-pane" id="commercial-2">
-                    <div class="col-md-6">
-                      <div class="card card-pricing card-raised">
-                        <div class="card-content">
-                          <h6 class="category">In School</h6>
-                          <h1 class="card-title"><small>¥</small>2000</h1>
-                          <ul>
-                            <li><b>Up to 4</b> Students</li>
-                            <li><b>40</b> Minutes</li>
-                            <li><b>##</b> ###</li>
-                            <li><b>##</b> ###</li>
-                          </ul>
-                          <a href="#" class="btn btn-primary btn-round">
-                            Contact
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="col-md-6">
-                      <div class="card card-pricing card-plain">
-                        <div class="card-content">
-                          <h6 class="category">In School</h6>
-                          <h1 class="card-title"><small>¥</small>2000</h1>
-                          <ul>
-                            <li><b>Up to 4</b> Students</li>
-                            <li><b>40</b> Minutes</li>
-                            <li><b>##</b> ###</li>
-                            <li><b>##</b> ###</li>
-                          </ul>
-                          <a href="#" class="btn btn-primary btn-round">
-                            Contact
+                          <a href="#contactus" class="btn btn-primary btn-round">
+                            お問い合わせ
                           </a>
                         </div>
                       </div>
@@ -1228,7 +1233,7 @@
           <div class="card card-contact">
             <form role="form" id="contact-form" method="post" action="form.php">
               <div class="header header-raised header-blue text-center">
-                <h4 class="card-title">お問い合わせ</h4>
+                <h4 class="card-title">メールでのお問い合わせはこちら</h4>
               </div>
               <div class="card-content">
                 <div class="row">
@@ -1238,7 +1243,7 @@
                         <i class="material-icons">phone</i>
                       </div>
                       <div class="description">
-                        <h5 class="info-title">Give us a ring</h5>
+                        <h5 class="info-title">お電話でのお問い合わせ</h5>
                         <p class="map-contact-info">
                           TEL：078-331-3035
                           <br> 平日/AM11:30～PM8:30
@@ -1289,12 +1294,13 @@
 
                 <div class="row">
                   <div class="col-md-6">
-                    <div class="checkbox">
+                    <!-- <div class="checkbox">
                       <label>
                         <input type="checkbox" name="optionsCheckboxes">
                         I'm not a robot
                       </label>
-                    </div>
+                    </div> -->
+                    <div class="g-recaptcha" data-sitekey="6Ldv6HYUAAAAALDLX4TmV8sTlTRdSCMuu5uvxUm7"></div>
                   </div>
                   <div class="col-md-6">
                     <button type="submit" class="btn btn-primary pull-right">送信
