--- a/lesson-course.html
+++ b/lesson-course.html
@@ -50,6 +50,8 @@
 	<link rel="stylesheet" href="assets/css/main1.css">
 	<link rel="stylesheet" href="assets/css/main2.css">
 
+	<!-- Google reCaptcha -->
+	<script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 
 <body class="blog-posts" id="top">
@@ -593,12 +595,12 @@
 								下記フォームよりお問い合わせいただきました場合、自動返信メールが届きます。 受付完了の自動返信メールが届かない場合は、 お問い合わせが受付できていない可能性がございますので、お手数ですがお電話
 								<strong>（078-331-3035）</strong>にてご連絡ください。
 							</h4>
-							<form class="contact-form">
+							<form class="contact-form" role="form" method="post" action="contact.php">
 								<div class="row">
 									<div class="col-md-12">
 										<div class="form-group label-floating">
 											<label class="control-label">お名前（必須）</label>
-											<input type="email" class="form-control" required>
+											<input name="name" type="text" class="form-control" required>
 										</div>
 									</div>
 								</div>
@@ -606,13 +608,13 @@
 									<div class="col-md-6">
 										<div class="form-group label-floating">
 											<label class="control-label">メールアドレス（必須）</label>
-											<input type="email" class="form-control" required>
+											<input name="email" type="email" class="form-control" required>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="form-group label-floating">
 											<label class="control-label">メールアドレス（確認用）</label>
-											<input type="email" class="form-control" required>
+											<input name="email-confirm" type="email" class="form-control" required>
 										</div>
 									</div>
 								</div>
@@ -620,24 +622,27 @@
 									<div class="col-md-6">
 										<div class="form-group label-floating">
 											<label class="control-label">電話番号（必須）</label>
-											<input type="text" class="form-control" required>
+											<input name="phone" type="text" class="form-control" required>
 										</div>
 									</div>
 									<div class="col-md-6">
 										<div class="form-group label-floating">
 											<label class="control-label">折り返しのお電話ご希望の時間帯</label>
-											<input type="text" class="form-control">
+											<input name="time" type="text" class="form-control">
 										</div>
 									</div>
 								</div>
 
 								<div class="form-group label-floating">
 									<label class="control-label">お問い合わせ内容</label>
-									<textarea class="form-control" rows="4" required></textarea>
+									<textarea name="message" class="form-control" rows="4" required></textarea>
 								</div>
 
 								<div class="row">
-									<div class="col-md-4 col-md-offset-4 text-center">
+									<div class="col-md-5 col-md-offset-1 text-center">
+										<div class="g-recaptcha" data-sitekey="6Ldv6HYUAAAAALDLX4TmV8sTlTRdSCMuu5uvxUm7"></div>
+									</div>
+									<div class="col-md-5 text-center">
 										<button class="btn btn-primary btn-raised">
 											送信
 											<i class="material-icons pull-right" style="margin-left: 10px;">send</i>
