Add mail btn img

--- a/index.html
+++ b/index.html
@@ -290,18 +290,16 @@
           <h1 class="title">目標を達成できる<br>英会話スクール</h1>
           <h3 class="title">今の勉強法やスクールで満足ですか？</h3>
           <br />
-          <!-- <a href="https://www.youtube.com/watch?v=aSdQn2mFn1I" target="_blank" class="btn btn-danger btn-raised btn-lg">
-            <i class="fa fa-play"></i> Watch video
-          </a> -->
+
 
           <div class="u-margin-right-small" style="display: inline-block">
-            <a href="tel:###-###-###" class="call-now-btn-box">
-              <img src="assets/img/call-banner-blue.png" alt="" class="call-now-btn">
+            <a href="#contactus" class="call-now-btn-box">
+              <img src="assets/img/call-banner-mail.jpg" alt="" class="call-now-btn">
             </a>
           </div>
 
           <div class="u-margin-top-small" style="display: inline-block">
-            <a href="tel:###-###-###" class="call-now-btn-box">
+            <a href="tel:078-331-3035" class="call-now-btn-box">
               <img src="assets/img/call-banner-blue.png" alt="" class="call-now-btn">
             </a>
           </div>
@@ -374,7 +372,7 @@
           <a href="lesson-course.html" class="btn btn-primary btn-lg">
             レッスンを詳しく見てみる
           </a>
-          <a href="tel:###-###-###" class="call-now-btn-box">
+          <a href="tel:078-331-3035" class="call-now-btn-box">
             <img src="assets/img/call-banner-blue.png" alt="" class="call-now-btn">
           </a>
         </div>
@@ -665,12 +663,12 @@
               <!-- ************************************** -->
               <div class="row">
                 <div class="row text-center">
-                  <a href="#contactus" class="btn btn-primary btn-lg">
-                    Contact Form
+                  <a href="#contactus" class="call-now-btn-box">
+                    <img src="assets/img/call-banner-mail.jpg" alt="" class="call-now-btn">
                   </a>
                 </div>
                 <div class="row text-center u-margin-top-small">
-                  <a href="tel:###-###-###" class="call-now-btn-box">
+                  <a href="tel:078-331-3035" class="call-now-btn-box">
                     <img src="assets/img/call-banner-blue.png" alt="" class="call-now-btn">
                   </a>
                 </div>
@@ -1582,7 +1580,7 @@
           document.write(new Date().getFullYear())
         </script>, made with
         <i class="fa fa-heart heart"> by
-          <a href="http://www.kobedesignlab.com">KobeDesignLab</a>
+          <a href="http://www.kobedesignlab.com" target="_blank">KobeDesignLab</a>
         </i>
       </div>
     </div>
