Add autoresponder to contact.php, change btn styles

--- a/pricing.html
+++ b/pricing.html
@@ -239,10 +239,10 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h1 class="title">料金と時間割</h1>
-					<h4>
+					<!-- <h4>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore minus recusandae necessitatibus at omnis,
 						sapiente odio accusantium esse, totam reiciendis ex ea, dolor.
-					</h4>
+					</h4> -->
 				</div>
 			</div>
 		</div>
@@ -288,7 +288,7 @@
 											<li><b>¥14,240</b> 税込み</li>
 										</ul>
 										<a href="#contactus" class="btn btn-blue btn-raised btn-round">
-											Book a free trial lesson
+											無料体験レッスンを申し込む
 										</a>
 									</div>
 								</div>
@@ -306,7 +306,7 @@
 											<li><b>¥19,880</b> 税込み</li>
 										</ul>
 										<a href="#contactus" class="btn btn-white btn-raised btn-round">
-											Book a free trial lesson
+											無料体験レッスンを申し込む
 										</a>
 									</div>
 								</div>
@@ -323,7 +323,7 @@
 											<li><b>¥34,560</b> 税込み</li>
 										</ul>
 										<a href="#contactus" class="btn btn-blue btn-raised btn-round">
-											Book a free trial lesson
+											無料体験レッスンを申し込む
 										</a>
 									</div>
 								</div>
@@ -342,7 +342,7 @@
 											<li><b>¥37,560</b> 税込み</li>
 										</ul>
 										<a href="#contactus" class="btn btn-blue btn-raised btn-round">
-											Book a free trial lesson
+											無料体験レッスンを申し込む
 										</a>
 									</div>
 								</div>
@@ -360,7 +360,7 @@
 											<li><b>¥53,160</b> 税込み</li>
 										</ul>
 										<a href="#contactus" class="btn btn-white btn-raised btn-round">
-											Book a free trial lesson
+											無料体験レッスンを申し込む
 										</a>
 									</div>
 								</div>
@@ -377,7 +377,7 @@
 											<li><b>¥77,760</b> 税込み</li>
 										</ul>
 										<a href="#contactus" class="btn btn-blue btn-raised btn-round">
-											Book a free trial lesson
+											無料体験レッスンを申し込む
 										</a>
 									</div>
 								</div>
@@ -396,7 +396,7 @@
 											<li><b>¥116,800</b> 税込み</li>
 										</ul>
 										<a href="#contactus" class="btn btn-blue btn-raised btn-round">
-											Book a free trial lesson
+											無料体験レッスンを申し込む
 										</a>
 									</div>
 								</div>
@@ -414,7 +414,7 @@
 											<li><b>¥205,000</b> 税込み</li>
 										</ul>
 										<a href="#contactus" class="btn btn-white btn-raised btn-round">
-											Book a free trial lesson
+											無料体験レッスンを申し込む
 										</a>
 									</div>
 								</div>
@@ -443,26 +443,40 @@
 				</div>
 
 				<div class="row">
-					<div class="col-sm-12 text-center" style="margin-top: 30px;">
+					<!-- <div class="col-sm-12 text-center" style="margin-top: 30px;">
 						<a style="width: 275px;" href="#contactus" class="btn btn-primary" style="margin-right: 30px;">Book Free Trial Lesson</a>
 						<a style="width: 275px;" href="index.html#contactus" class="btn btn-primary">Contact us for more lesson info</a>
+					</div> -->
+					<!-- ************************************** -->
+					<div class="row">
+						<div class="row text-center u-margin-top-small">
+							<a href="#contactus" class="call-now-btn-box">
+								<img src="assets/img/call-banner-mail.jpg" alt="" class="call-now-btn">
+							</a>
+						</div>
+						<div class="row text-center u-margin-top-small">
+							<a href="tel:078-331-3035" class="call-now-btn-box">
+								<img src="assets/img/call-banner-blue.png" alt="" class="call-now-btn">
+							</a>
+						</div>
 					</div>
+					<!-- ************************************** -->
 				</div>
 
 			</div>
 
 
+		</div>
+		<!-- container -->
+
+
+
+		<!-- <hr /> -->
 
 
 
 
-
-			<hr />
-
-
-
-
-
+		<!-- <div class="container">
 
 
 			<div class="features-2">
@@ -535,7 +549,7 @@
 				</div>
 			</div>
 
-		</div>
+		</div> -->
 		<!-- container -->
 
 		<hr>
