--- a/lesson-course-info.html
+++ b/lesson-course-info.html
@@ -501,11 +501,11 @@
 
 
 
-			<div class="cd-section" id="pricing">
+			<!-- <div class="cd-section" id="pricing"> -->
 
-				<!--     *********    PRICING 5     *********      -->
+			<!--     *********    PRICING 5     *********      -->
 
-				<div class="pricing-5 section-gray" id="pricing-5 lessons">
+			<!-- <div class="pricing-5 section-gray" id="pricing-5 lessons">
 
 					<div class="container">
 						<div class="row">
@@ -553,7 +553,6 @@
 													<ul>
 														<li><b>1</b> Student</li>
 														<li><b>40</b> Minutes</li>
-														<!-- <li><b>4 to 100</b> Lesson pack</li> -->
 														<li>Up to 2.5 years to take the lessons</li>
 													</ul>
 													<a href="#contactus" class="btn btn-primary btn-round">
@@ -665,15 +664,15 @@
 						</div>
 
 					</div>
-				</div>
+				</div> -->
 
-				<!--     *********    END PRICING 5      *********      -->
+			<!--     *********    END PRICING 5      *********      -->
 
-			</div>
-
-
+			<!-- </div> -->
 
 
+
+			<hr>
 
 
 
