Add autoresponder, edit footer

--- a/index.html
+++ b/index.html
@@ -1439,7 +1439,7 @@
       <div id="features" class="section stations-section u-margin-top-huge">
 
         <h4 class="title text-center">神戸・三宮の英会話サンミハールランゲージサービス</h4>
-        <h2 class="title text-center">アクセス・地図</h2>
+        <h2 class="title text-center">アクセス</h2>
         <h5 class="info-heading text-center">英会話サンミハール・神戸三宮教室への道順　三宮・元町どの駅からも3分から5分</h3>
           <br>
 
@@ -1558,18 +1558,13 @@
       <nav class="pull-left">
         <ul>
           <li>
-            <a href="http://sunmihall.com">
+            <a href="index.html">
               Sun Mihall Language Services
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="about.html">
               About Us
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              Blog
             </a>
           </li>
         </ul>
