--- a/pricing.html
+++ b/pricing.html
@@ -238,6 +238,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
+					<h4>神戸・三宮の英会話サンミハールランゲージサービスの</h4>
 					<h1 class="title">料金と時間割</h1>
 					<!-- <h4>
 						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore minus recusandae necessitatibus at omnis,
@@ -645,18 +646,13 @@
 			<nav class="pull-left">
 				<ul>
 					<li>
-						<a href="http://sunmihall.com">
+						<a href="index.html">
 							Sun Mihall Language Services
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="about.html">
 							About Us
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							Blog
 						</a>
 					</li>
 				</ul>
@@ -667,7 +663,7 @@
 					document.write(new Date().getFullYear())
 				</script>, made with
 				<i class="fa fa-heart heart"> by
-					<a href="http://www.kobedesignlab.com">KobeDesignLab</a>
+					<a href="http://www.kobedesignlab.com" target="_blank">KobeDesignLab</a>
 				</i>
 			</div>
 		</div>
