--- a/lesson-course-info.html
+++ b/lesson-course-info.html
@@ -826,18 +826,13 @@
 			<nav class="pull-left">
 				<ul>
 					<li>
-						<a href="http://sunmihall.com">
+						<a href="index.html">
 							Sun Mihall Language Services
 						</a>
 					</li>
 					<li>
-						<a href="#">
+						<a href="about.html">
 							About Us
-						</a>
-					</li>
-					<li>
-						<a href="#">
-							Blog
 						</a>
 					</li>
 				</ul>
@@ -848,7 +843,7 @@
 					document.write(new Date().getFullYear())
 				</script>, made with
 				<i class="fa fa-heart heart"> by
-					<a href="http://www.kobedesignlab.com">KobeDesignLab</a>
+					<a href="http://www.kobedesignlab.com" target="_blank">KobeDesignLab</a>
 				</i>
 			</div>
 		</div>
