--- a/lesson-course-everday.html
+++ b/lesson-course-everday.html
@@ -550,7 +550,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-4">
-								<h2 class="title">試験対策コースのおすすめ料金プラン</h2>
+								<h2 class="title">Choose a plan for your next project</h2>
 								<ul class="nav nav-pills" role="tablist">
 									<li class="active">
 										<a href="#private" role="tab" data-toggle="tab">
@@ -576,7 +576,7 @@
 									See more pricing
 								</a>
 								<a href="#contactus" class="btn btn-primary" style="width: 100%; max-width: 300px; display: block;">
-									無料体験レッスンご予約
+									Book a trial lesson now
 								</a>
 							</div>
 
@@ -596,7 +596,7 @@
 														<li>Up to 2.5 years to take the lessons</li>
 													</ul>
 													<a href="#contactus" class="btn btn-primary btn-round">
-														無料体験レッスンご予約
+														Contact
 													</a>
 												</div>
 											</div>
@@ -614,7 +614,7 @@
 														<li><b>##</b> ###</li>
 													</ul>
 													<a href="#contactus" class="btn btn-white btn-round">
-														無料体験レッスンご予約
+														Contact
 													</a>
 												</div>
 											</div>
@@ -634,7 +634,7 @@
 														<li><b>40</b> Minutes</li>
 													</ul>
 													<a href="#contactus" class="btn btn-primary btn-round">
-														無料体験レッスンご予約
+														Contact
 													</a>
 												</div>
 											</div>
@@ -652,7 +652,7 @@
 														<li><b>##</b> ###</li>
 													</ul>
 													<a href="#contactus" class="btn btn-primary btn-round">
-														無料体験レッスンご予約
+														Contact
 													</a>
 												</div>
 											</div>
@@ -672,7 +672,7 @@
 														<li><b>40</b> Minutes</li>
 													</ul>
 													<a href="#contactus" class="btn btn-primary btn-round">
-														無料体験レッスンご予約
+														Contact
 													</a>
 												</div>
 											</div>
@@ -690,7 +690,7 @@
 														<li><b>##</b> ###</li>
 													</ul>
 													<a href="#contactus" class="btn btn-primary btn-round">
-														無料体験レッスンご予約
+														Contact
 													</a>
 												</div>
 											</div>
