content added to everyday page. images still need to be added.

--- a/lesson-course-everday.html
+++ b/lesson-course-everday.html
@@ -249,7 +249,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h4>神戸・三宮の英会話サンミハールランゲージサービスの</h4>
-					<h1 class="title">資格試験対策</h1>
+					<h1 class="title">日常英会話・ビジネス英会話</h1>
 				</div>
 			</div>
 		</div>
@@ -274,18 +274,18 @@
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center">
 							<h4 class="title">神戸・三宮の英会話サンミハールランゲージサービス</h4>
-							<h2 class="title">TOEIC・英検・TOEFL・IELTS</h2>
+							<h2 class="title">日常英会話・ビジネス英会話</h2>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-md-3">
-							<a href="#toeic" class="btn btn-primary btn-round" style="width: 100%">TOEIC</a>
-							<a href="#eiken" class="btn btn-primary btn-round" style="width: 100%">英検</a>
-							<a href="#toefl" class="btn btn-primary btn-round" style="width: 100%">TOEFL</a>
-							<a href="#ielts" class="btn btn-primary btn-round" style="width: 100%">IELTS</a>
+							<a href="#toeic" class="btn btn-primary btn-round" style="width: 100%">日常英会話</a>
+							<a href="#eiken" class="btn btn-primary btn-round" style="width: 100%">ビジネス英会話</a>
+							<!-- <a href="#toefl" class="btn btn-primary btn-round" style="width: 100%">TOEFL</a>
+							<a href="#ielts" class="btn btn-primary btn-round" style="width: 100%">IELTS</a> -->
 						</div>
-						<div class="col-md-8 col-md-offset-1">
+						<!-- <div class="col-md-8 col-md-offset-1">
 							<h5>TOEIC（トーイック）、英検、TOEFL（トフル）、IELTS（アイエルツ）他各種試験対策を経験豊かなネイティブ講師の指導と日本人スタッフによる無料のカウンセリングで目標達成！<br><br>
 
 								★ 試験対策をサンミハールに決めた理由<br>
@@ -302,7 +302,7 @@
 							<div class="col-sm-12 text-center" style="margin-top: 30px;">
 								<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
 							</div>
-						</div>
+						</div> -->
 					</div>
 
 					<!--                 nav pills -->
@@ -387,7 +387,7 @@
 						<div class="row">
 
 							<div class="col-md-10 col-md-offset-1">
-								<h2 class="title">試験対策コース</h2>
+								<h2 class="title">日常英会話・ビジネス英会話</h2>
 
 								<br />
 								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="toeic"></div>
@@ -400,17 +400,18 @@
 										</div>
 										<div class="col-md-8">
 											<h3 class="card-title u-margin-top-small-tablet">
-												<a href="#">TOEIC</a>
+												<a href="#">日常英会話</a>
 											</h3>
 											<p>
-												神戸・三宮の英会話サンミハールランゲージサービスのTOEIC（トーイック）コースは短期集中でのスコアアップが有効です。その方のレベルにより、より早く目標の点数に達するまで指導します。<br>
-												<strong>初心者(中学英語の理解に自信のない方)には基礎から丁寧に授業で学べます。その後以下の対策に進みます。</strong></p>
-											<ol>
-												<li>模試を受ける。</li>
-												<li>各パートに対しての理解度を「パーセンテージで評価」した分析表を元に弱点を確認する。</li>
-												<li>各問題に対する、また個人にあった勉強方法を無料カウンセリングで細く聞いて計画を立てる。</li>
-											</ol>
-											<p>など、以上は対策の一部です。詳しくはスクールにお問い合わせください。</p>
+												入門、初級、中級、中級上、上級、特級などその方の今の英会話レベルを質疑応答によって流暢さ、文法力、語彙数、態度、リスニング力他の項目ごとに細かく20段階に分析し、現状のレベル認識とゴールの設定を行い、目的に見合ったテキスト、その他題材を使用して授業を進めていきます。（1年で３,２００円くらいの教材が多いです。）
+												ただ、教材は持ち込みもできますし、使わなくても大丈夫です。例えば、日本に住む外国人に街の案内をしたい。などご要望に合わせてご自分のやりたいことから、自由に授業を組み立てていくことができます。
+											</p>
+											<p>日常英会話のレッスン例<br><br>
+												●旅行英会話
+												旅行で英語を使いたい方には旅先で必要な状況設定の中で会話モデルを練習し、実際の場所や名前を使ってすぐに使える実践旅行英会話を習得します。
+												＜状況設定の例＞　空港、税関、飛行機、乗り物、地図と道順、ショッピング、ホテル、レストラン、劇場、観光、電話、郵便、病院　など</p>
+											<p>●旅行直前英会話
+												旅行英会話の状況設定の中からご自分にとって一番重要なものをピックアップしてレッスン回数を決めます。海外のサッカー観戦の後好きな選手にサインと写真をお願いするなど、どんなご要望でも授業の中で練習することが出来、大変ご好評いただいております。</p>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
 											</div>
@@ -430,10 +431,35 @@
 										</div>
 										<div class="col-md-8">
 											<h3 class="card-title u-margin-top-small-tablet">
-												<a href="#">英検</a>
+												<a href="#">ビジネス英会話 </a>
 											</h3>
+											<p>ビジネス英会話のレッスン例<br><br>
+												<strong>●プレゼンテーション</strong><br>
+												資料をそのままお持ち下さい。教師が添削し、その後より効果的なプレゼンが出来るようアドバイスし、質疑応答まで何度も練習していただきます。1回完結も出来ます。
+											</p>
 											<p>
-												「過去問を制する者は英検を制する！」英検の一次試験対策はお金をかけず、自宅でひたすら過去問を解くこと。とは言っても、一人でできない、わからないところは、レッスンで日本語で聞いて話して弱点補強し、合格ラインへと押し上げます。一次試験の作文対策は宿題で書いて来られた作文をネイティブ講師に添削してもらうのが、ベスト！一次、二次試験を問わず、サンミハールの単語テストで語彙力アップ！英検１級、準１級、２級、準２級、３級の二次試験の面接対策は神戸・三宮の英会話サンミハールランゲージサービスのネイティブの講師に行ってもらうのが、経済的で効果的。高校１年生で準１級合格の実績！
+												<strong>●ビジネスミーティング</strong><br>
+												ビジネス英会話の基礎ではミーティングでの発言に必要とされる基本的な英語会話力を養成すると同時に、発言回数が少なくてもうまくあいづちを打つなどの練習を行い、まずはよい聞き役になるためのトレーニングをします。ある程度苦手意識がなくなってきたところで、自分がイニシアティブをとって話すための表現、技法を学び具体的な（出来れば実際の仕事に関連した内容で）模擬会議の練習を行い実践力を養います。
+											</p>
+											<p>
+												<strong>●ファシリテーション</strong><br>
+												英語で行われるミーティングにおいて、ファシリテーター（進行役）がファシリテーションの表現や手法を身に着けているかどうかは重要です。ビジネスミーティングでどうすれば英語でうまく進行できるのか基本的な表現や手法をケーススタディ形式で学びます。既に経験のある方は、さらに議論を活性化するために効果的な英語表現や技法をネイティブの視点で学びます。
+											</p>
+											<p>
+												<strong>●電話・メール</strong><br>
+												ビジネスシーンでの電話の応対、メールはビジネス英語の中でも比較的早く習得出来ます。職種、業種がはっきりしている場合は電話、メールの内容ごとに基本の文章をその方の会社で必要な用語を用いるなどしてひな形を作成し、応用の練習を行います。プライベートレッスンを受講の方はメールの文章は急がないものであれば宿題として無料で添削が出来ます。
+											</p>
+											<p>
+												<strong>●社内での会話</strong><br>
+												ビジネスシーンにおいて立場によっては、報告、説明などほとんどひとりで発話をしなければならない場合もあります。そのためには論理的に話すトレーニングが重要になってきます。業種、役職などによって異なる英語の表現方法を具体的な事例によって学び、職場で実践的に使えるようにします。例：外国人上司との会話、外国人作業員への説明など
+											</p>
+											<p>
+												<strong>●一般ビジネス英語・英会話</strong><br>
+												将来、職場で英語を使って仕事をされたい方、または現在職場で日常的に英語を使用する方のためのプログラムです。初級から上級まで、レベルにあわせてシーン別のビジネス英会話を学びます。職場で英語は必要だが初心者の方には、簡単な文法で現在の職場で特に必要な表現から無理なく学んでいただけます。
+											</p>
+											<p>
+												<strong>●海外出張・赴任準備</strong><br>
+												<a href="#">海外赴任準備のページ</a>をご参照下さい。
 											</p>
 											<div class="col-sm-12 text-center" style="margin-top: 30px;">
 												<a href="#contactus" class="btn btn-primary">無料体験レッスンご予約</a>
@@ -442,7 +468,7 @@
 									</div>
 								</div>
 
-								<hr class="hr-dark-blue">
+								<!-- <hr class="hr-dark-blue">
 
 								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="toefl"></div>
 								<div class="card card-plain card-blog">
@@ -483,11 +509,11 @@
 											</div>
 										</div>
 									</div>
-								</div>
+								</div> -->
 
-								<hr class="hr-dark-blue">
+								<!-- <hr class="hr-dark-blue"> -->
 
-								<div class="anchor" style="display: hidden; position: relative; top: -100px" id="ielts"></div>
+								<!-- <div class="anchor" style="display: hidden; position: relative; top: -100px" id="ielts"></div>
 								<div class="card card-plain card-blog">
 									<div class="row">
 										<div class="col-md-4">
@@ -522,7 +548,7 @@
 											</div>
 										</div>
 									</div>
-								</div>
+								</div> -->
 
 							</div>
 
